fixed alignment of input elements for google chrome

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -96,9 +96,10 @@ a:visited {color:#39D;text-decoration:none;}
 input[type=submit],input[type=button],.button {
   background-color:#39D;
   color:white;
-  border:0;
+  border:1px solid #39D;
+  height:25px;
   margin:10px 0px 0px 0px;
-  padding:2px 5px 4px 5px;
+  padding:2px 5px 2px 5px;
 }
 input[type=text], input[type=password], textarea, .inputbox{
   border:1px solid #39D;
